--- a/.github/workflows/main_chatty.yml
+++ b/.github/workflows/main_chatty.yml
@@ -16,6 +16,10 @@ jobs:
     permissions:
       contents: read #This is required for actions/checkout
 
+    defaults:
+        run:
+          working-directory: ChatBot
+
     steps:
       - uses: actions/checkout@v4
 
@@ -30,7 +34,8 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r ChatBot/requirements.txt
+        
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
